test/log/reduction/vardotacc_vv_u32_m.txt
vardotacc_vv_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_u32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vardotacc_vv_u32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vardotacc_vv_u32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vardotacc_vv_u32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vardotacc_vv_u32_m.c:22:6: warning: no previous prototype for 'vardotacc_vv_u32_m_golden' [-Wmissing-prototypes]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c: In function 'vardotacc_vv_u32_m_golden':
vardotacc_vv_u32_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vardotacc_vv_u32_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_u32_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vardotacc_vv_u32_m.c:22:41: warning: unused parameter 'src_mask' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                ~~~~~~~~~^~~~~~~~
vardotacc_vv_u32_m.c:22:58: warning: unused parameter 'dst_mask' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                  ~~~~~~~~^~~~~~~~
vardotacc_vv_u32_m.c:22:77: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                                   ~~~~~~~~~~^
vardotacc_vv_u32_m.c:22:89: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                                               ~~~~~~~~~~^
vardotacc_vv_u32_m.c:22:101: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                                                           ~~~~~~~~~~^
vardotacc_vv_u32_m.c:22:113: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                                                                       ~~~~~~~~~~^~~~~~~~~~
vardotacc_vv_u32_m.c: In function 'main':
vardotacc_vv_u32_m.c:46:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   46 |     data_init_bool(src_mask, exp_src_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vardotacc_vv_u32_m.c:51:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   51 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vardotacc_vv_u32_m.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vardotacc_vv_u32_m.c:51:5: error: 'data_init_scalar' undeclared (first use in this function)
   51 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c:54:31: error: incompatible type for argument 1 of 'vardotacc_vv_u32_m_golden'
   54 |     vardotacc_vv_u32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                               ^~~~~~~~~~~~
      |                               |
      |                               uint64_t * {aka long long unsigned int *}
vardotacc_vv_u32_m.c:22:41: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                ~~~~~~~~~^~~~~~~~
vardotacc_vv_u32_m.c:54:44: error: incompatible type for argument 2 of 'vardotacc_vv_u32_m_golden'
   54 |     vardotacc_vv_u32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                            ^~~~~~~~~~~~
      |                                            |
      |                                            uint64_t * {aka long long unsigned int *}
vardotacc_vv_u32_m.c:22:58: note: expected 'bool8_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                  ~~~~~~~~^~~~~~~~
vardotacc_vv_u32_m.c:54:75: error: incompatible type for argument 6 of 'vardotacc_vv_u32_m_golden'
   54 |     vardotacc_vv_u32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                                                           ^~~~~~~~~
      |                                                                           |
      |                                                                           enum ACCUM
vardotacc_vv_u32_m.c:22:113: note: expected 'uint64_t *' {aka 'long long unsigned int *'} but argument is of type 'enum ACCUM'
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |                                                                                                       ~~~~~~~~~~^~~~~~~~~~
vardotacc_vv_u32_m.c:54:5: error: too many arguments to function 'vardotacc_vv_u32_m_golden'
   54 |     vardotacc_vv_u32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c:22:6: note: declared here
   22 | void vardotacc_vv_u32_m_golden(bool16_t src_mask,bool8_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u32_m.c:57:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   57 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c,accum);
      |     ^~~~~~
vardotacc_vv_u32_m.c:57:51: error: incompatible type for argument 3 of 'vardotacc_vv_u32_m'
   57 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c,accum);
      |                                                   ^
      |                                                   |
      |                                                   uint32x16_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2095:59: note: expected 'uint64x8_t' but argument is of type 'uint32x16_t'
 2095 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                ~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:57:53: error: incompatible type for argument 4 of 'vardotacc_vv_u32_m'
   57 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c,accum);
      |                                                     ^
      |                                                     |
      |                                                     uint16x32_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2095:76: note: expected 'uint32x16_t' but argument is of type 'uint16x32_t'
 2095 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                                ~~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:57:55: error: incompatible type for argument 5 of 'vardotacc_vv_u32_m'
   57 |     result = vardotacc_vv_u32_m(src_mask,dst_mask,a,b,c,accum);
      |                                                       ^
      |                                                       |
      |                                                       uint16x32_t
In file included from vardotacc_vv_u32_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2095:93: note: expected 'uint32x16_t' but argument is of type 'uint16x32_t'
 2095 | vardotacc_vv_u32_m (bool16_t __a, bool8_t __b, uint64x8_t __c, uint32x16_t __d, uint32x16_t __e, enum ACCUM accum)
      |                                                                                 ~~~~~~~~~~~~^~~
vardotacc_vv_u32_m.c:62:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long unsigned int' [-Wformat=]
   62 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long unsigned int
      |                                          %llx
vardotacc_vv_u32_m.c:62:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   62 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint64_t {aka long long unsigned int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed